all changes from develop and clean

--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -1,6 +1,6 @@
 intent: service
 flavor: deployment
-alias-flavors: ["k8s", "default"]
+alias-flavors: ["k8s"]
 version: "0.1"
 description: Adds service module
 clouds:
@@ -20,6 +20,7 @@ metadata:
       type: string
       title: Namespace
       description: Namespace in which deployment should be deployed
+      default: default
 spec:
   title: K8s flavor of service
   type: object
@@ -48,7 +49,6 @@ spec:
       description: Assign roles, define access levels, and enforce conditions for
         managing resource security and compliance
       x-ui-toggle: true
-      x-ui-override-disable: true
       properties:
         aws:
           type: object
@@ -314,20 +314,26 @@ spec:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["HttpCheck"]
               description: URL for readiness
+            readiness_headers:
+              type: object
+              title: Readiness Headers
+              description: Headers to be sent with readiness check request
+              x-ui-yaml-editor: true
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.readiness_check_type
+                values: ["HttpCheck"]  
             readiness_exec_command:
               type: array
               title: Readiness Exec Command
               pattern: '^([^,]+)(,\s*[^,]+)*$'
               x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
+                by space"
               x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+                be space separated"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["ExecCheck"]
               description: Commands for readiness check
-              items:
-                type: string
               x-ui-override-disable: true
             liveness_check_type:
               type: string
@@ -400,20 +406,118 @@ spec:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["HttpCheck"]
               description: URL for liveness
+            liveness_headers:
+              type: object
+              title: Liveness Headers
+              description: Headers to be sent with liveness check request
+              x-ui-yaml-editor: true
+              x-ui-visible-if:
+                field: "spec.runtime.health_checks.liveness_check_type"
+                values: ["HttpCheck"]
             liveness_exec_command:
               type: array
               title: Liveness Exec Command
               pattern: '^([^,]+)(,\s*[^,]+)*$'
               x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
+                by space"
               x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+                be space separated"
               x-ui-visible-if:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["ExecCheck"]
               description: Commands for liveness
-              items:
-                type: string
+              x-ui-override-disable: true
+            startup_check_type:
+              type: string
+              title: Startup Check Type
+              default: None
+              x-ui-no-sort: true
+              enum:
+              - None
+              - PortCheck
+              - HttpCheck
+              - ExecCheck
+            startup_start_up_time:
+              type: integer
+              title: Startup Start-Up Time
+              default: 10
+              minimum: 0
+              maximum: 10000
+              x-ui-placeholder: "Enter startup start up time for the Pod"
+              x-ui-error-message: "Value doesn't match pattern, accepted values are
+                from 0-10000"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["PortCheck", "HttpCheck", "ExecCheck"]
+              description: Wait time for startup check (in sec)
+            startup_timeout:
+              type: integer
+              title: Startup Timeout
+              default: 10
+              minimum: 0
+              maximum: 10000
+              x-ui-placeholder: "Enter startup timeout for the Pod"
+              x-ui-error-message: "Value doesn't match pattern, accepted values are
+                from 0-10000"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["PortCheck", "HttpCheck", "ExecCheck"]
+              description: Max time for startup (in sec)
+            startup_period:
+              type: integer
+              title: Startup Check Interval
+              default: 10
+              minimum: 0
+              maximum: 10000
+              x-ui-placeholder: "Enter startup period for the Pod"
+              x-ui-error-message: "Value doesn't match pattern, accepted values are
+                from 0-10000"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["PortCheck", "HttpCheck", "ExecCheck"]
+              description: Repeated interval for health-check (in sec)
+            startup_port:
+              type: string
+              title: Startup Port
+              x-ui-placeholder: "Enter startup port for the Pod"
+              x-ui-error-message: "Value doesn't match pattern, accepted values are
+                from 0-65535"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["PortCheck", "HttpCheck"]
+              description: Port for Health Checks
+              x-ui-dynamic-enum: spec.runtime.ports.*.port
+              x-ui-disable-tooltip: "No Ports Added"
+            startup_url:
+              type: string
+              title: Startup URL
+              pattern: "^(/[^/]+)*(/)?$"
+              x-ui-placeholder: "Enter startup url for the Pod"
+              x-ui-error-message: "Value doesn't match pattern, eg: / , /<path>"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["HttpCheck"]
+              description: URL for startup
+            startup_headers:
+              type: object
+              title: Startup Headers
+              description: Headers to be sent with startup check request
+              x-ui-yaml-editor: true
+              x-ui-visible-if:
+                field: "spec.runtime.health_checks.startup_check_type"
+                values: ["HttpCheck"]
+            startup_exec_command:
+              type: array
+              title: Startup Exec Command
+              pattern: '^([^,]+)(,\s*[^,]+)*$'
+              x-ui-placeholder: "Enter startup exec for the Pod, commands are separated
+                by space"
+              x-ui-error-message: "Value doesn't match pattern, commands needs to
+                be space separated"
+              x-ui-visible-if:
+                field: spec.runtime.health_checks.startup_check_type
+                values: ["ExecCheck"]
+              description: Commands for startup check
               x-ui-override-disable: true
           required:
           - readiness_port
@@ -422,6 +526,9 @@ spec:
           - liveness_port
           - liveness_url
           - liveness_exec_command
+          - startup_port
+          - startup_url
+          - startup_exec_command
         autoscaling:
           type: object
           title: Autoscaling
@@ -884,11 +991,6 @@ spec:
                 to be unavailable during disruption, this is pod disruption budget"
               x-ui-error-message: "Value doesn't match pattern, it should be number
                 ranging from 0 to 100 or 0% to 100%"
-    env:
-      title: Environment Variables
-      description: Map of environment variables passed to the main container.
-      type: object
-      x-ui-yaml-editor: true
     init_containers:
       title: Init Containers
       description: Map of specialized containers that run before app containers in
@@ -1511,15 +1613,13 @@ spec:
                       title: Readiness Exec Command
                       pattern: '^([^,]+)(,\s*[^,]+)*$'
                       x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
+                        are separated by space"
                       x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                        to be space separated"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values: ["ExecCheck"]
                       description: Commands for readiness check
-                      items:
-                        type: string
                       x-ui-override-disable: true
                     liveness_check_type:
                       type: string
@@ -1585,15 +1685,85 @@ spec:
                       title: Liveness Exec Command
                       pattern: '^([^,]+)(,\s*[^,]+)*$'
                       x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
+                        are separated by space"
                       x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                        to be space separated"
                       x-ui-visible-if:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type"
                         values: ["ExecCheck"]
                       description: Commands for liveness
-                      items:
-                        type: string
+                      x-ui-override-disable: true
+                    startup_check_type:
+                      type: string
+                      title: Startup Check Type
+                      default: None
+                      x-ui-no-sort: true
+                      enum:
+                      - None
+                      - PortCheck
+                      - HttpCheck
+                      - ExecCheck
+                    startup_start_up_time:
+                      type: integer
+                      title: Startup Start-Up Time
+                      default: 10
+                      minimum: 0
+                      maximum: 10000
+                      x-ui-placeholder: "Enter startup start up time for the Pod"
+                      x-ui-error-message: "Value doesn't match pattern, accepted values
+                        are from 0-10000"
+                      x-ui-visible-if:
+                        field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
+                        values: ["PortCheck", "HttpCheck", "ExecCheck"]
+                      description: Wait time for startup check (in sec)
+                    startup_timeout:
+                      type: integer
+                      title: Startup Timeout
+                      default: 10
+                      minimum: 0
+                      maximum: 10000
+                      x-ui-placeholder: "Enter startup timeout for the Pod"
+                      x-ui-error-message: "Value doesn't match pattern, accepted values
+                        are from 0-10000"
+                      x-ui-visible-if:
+                        field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
+                        values: ["PortCheck", "HttpCheck", "ExecCheck"]
+                      description: Max time for startup (in sec)
+                    startup_period:
+                      type: integer
+                      title: Startup Check Interval
+                      default: 10
+                      minimum: 0
+                      maximum: 10000
+                      x-ui-placeholder: "Enter startup period for the Pod"
+                      x-ui-error-message: "Value doesn't match pattern, accepted values
+                        are from 0-10000"
+                      x-ui-visible-if:
+                        field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
+                        values: ["PortCheck", "HttpCheck", "ExecCheck"]
+                      description: Repeated interval for health-check (in sec)
+                    startup_url:
+                      type: string
+                      title: Startup URL
+                      pattern: "^(/[^/]+)*(/)?$"
+                      x-ui-placeholder: "Enter startup url for the Pod"
+                      x-ui-error-message: "Value doesn't match pattern, eg: / , /<path>"
+                      x-ui-visible-if:
+                        field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
+                        values: ["HttpCheck"]
+                      description: URL for startup
+                    startup_exec_command:
+                      type: array
+                      title: Startup Exec Command
+                      pattern: '^([^,]+)(,\s*[^,]+)*$'
+                      x-ui-placeholder: "Enter startup exec for the Pod, commands
+                        are separated by space"
+                      x-ui-error-message: "Value doesn't match pattern, commands needs
+                        to be space separated"
+                      x-ui-visible-if:
+                        field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
+                        values: ["ExecCheck"]
+                      description: Commands for startup check
                       x-ui-override-disable: true
                     port:
                       type: string
@@ -1605,6 +1775,7 @@ spec:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type"
                         values: ["PortCheck", "HttpCheck"]
                       description: Port for Health Checks
+                      x-ui-dynamic-enum: spec.sidecars.{{this}}.runtime.ports.*.port
                       x-ui-disable-tooltip: "No Ports Added"
                       x-ui-typeable: true
                   required:
@@ -1612,6 +1783,8 @@ spec:
                   - readiness_exec_command
                   - liveness_url
                   - liveness_exec_command
+                  - startup_url
+                  - startup_exec_command
                   - port
               required:
               - size
@@ -1635,7 +1808,6 @@ spec:
   - enable_host_anti_affinity
   - runtime
   - release
-  - env
   - init_containers
   - sidecars
   - cloud_permissions
@@ -1661,8 +1833,8 @@ sample:
       command: []
       autoscaling:
         scaling_on: CPU
-        min: 1
-        max: 1
+        min: "1"
+        max: "1"
         cpu_threshold: "50"
       ports: {}
       size:
