--- a/modules/kafka/msk/0.1/facets.yaml
+++ b/modules/kafka/msk/0.1/facets.yaml
@@ -1,6 +1,6 @@
 intent: kafka
 flavor: msk
-version: "0.1"
+version: '0.1'
 description: Adds Kafka module of MSK flavor
 clouds:
 - aws
@@ -88,21 +88,30 @@ spec:
               type: string
               title: Volume
               description: Volume request in kubernetes persistent volumes
-              pattern: "^[0-9]+[G]i?$"
-              x-ui-placeholder: "Enter volume size"
-              x-ui-error-message: "Volume must be specified in the correct format
-                with integer only (e.g., '10Gi' or '50Gi')."
+              pattern: ^[0-9]+[G]i?$
+              x-ui-placeholder: Enter volume size
+              x-ui-error-message: Volume must be specified in the correct format with
+                integer only (e.g., '10Gi' or '50Gi').
               x-ui-visible-if:
                 field: spec.persistence_enabled
-                values: [true]
-          required: ["instance", "instance_count", "volume"]
-      required: ["kafka"]
-  required: ["authenticated", "kafka_version", "persistence_enabled", "size"]
+                values:
+                - true
+          required:
+          - instance
+          - instance_count
+          - volume
+      required:
+      - kafka
+  required:
+  - authenticated
+  - kafka_version
+  - persistence_enabled
+  - size
 sample:
-  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/kafka/kafka.schema.json"
+  $schema: https://facets-cloud.github.io/facets-schemas/schemas/kafka/kafka.schema.json
   kind: kafka
   flavor: msk
-  version: "0.1"
+  version: '0.1'
   disabled: true
   metadata: {}
   spec:
