Fix for kubernetes output (intent) and aws (module)

--- a/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
@@ -343,7 +343,7 @@ inputs:
     - aws593
 outputs:
   default:
-    type: '@outputs/kubernetes'
+    type: '@outputs/aws_vpc'
     title: Kubernetes Cluster Output
     description: The output for the Kubernetes cluster
     providers:
