--- a/modules/network/azure_vpc/network/azure_network/1.0/facets.yaml
+++ b/modules/network/azure_vpc/network/azure_network/1.0/facets.yaml
@@ -1,7 +1,8 @@
 intent: network
 flavor: azure_network
-version: "1.0"
-description: Creates an Azure Virtual Network with configurable public subnets, private subnets, database subnets, and specialized subnets across availability zones
+version: '1.0'
+description: Creates an Azure Virtual Network with configurable public subnets, private
+  subnets, database subnets, and specialized subnets across availability zones
 clouds:
 - azure
 spec:
@@ -15,29 +16,26 @@ spec:
       x-ui-overrides-only: true
       x-ui-error-message: CIDR must be a valid IP block (e.g., 10.0.0.0/16)
       x-ui-placeholder: 10.0.0.0/16
-
     region:
       type: string
       title: Azure Region
       description: Azure region where the VNet will be created
       x-ui-overrides-only: true
-
     availability_zones:
       type: array
       title: Availability Zones
-      description: List of availability zones to use for subnets (e.g., ["1", "2", "3"])
+      description: List of availability zones to use for subnets (e.g., ["1", "2",
+        "3"])
       x-ui-overrides-only: true
       items:
         type: string
       minItems: 1
       maxItems: 3
-
     use_fixed_cidr_allocation:
       type: boolean
       title: Use Fixed CIDR Allocation
       description: Use predefined CIDR ranges instead of dynamic allocation
       default: false
-
     public_subnets:
       type: object
       title: Public Subnets Configuration
@@ -64,7 +62,6 @@ spec:
       required:
       - count_per_az
       - subnet_size
-
     private_subnets:
       type: object
       title: Private Subnets Configuration
@@ -91,7 +88,6 @@ spec:
       required:
       - count_per_az
       - subnet_size
-
     database_subnets:
       type: object
       title: Database Subnets Configuration
@@ -119,39 +115,31 @@ spec:
       required:
       - count_per_az
       - subnet_size
-
-    # Specialized Subnets
     enable_gateway_subnet:
       type: boolean
       title: Enable Gateway Subnet
       description: Create subnet for VPN/ExpressRoute gateways
       default: false
-
     enable_cache_subnet:
       type: boolean
       title: Enable Cache Subnet
       description: Create subnet for Redis and other caching services
       default: false
-
     enable_functions_subnet:
       type: boolean
       title: Enable Functions Subnet
       description: Create subnet for Azure Functions with VNet integration
       default: false
-
     enable_private_link_service_subnet:
       type: boolean
       title: Enable Private Link Service Subnet
       description: Create subnet for hosting Private Link Services
       default: false
-
-    # AKS Integration
     enable_aks:
       type: boolean
       title: Enable AKS Integration
       description: Configure subnets for Azure Kubernetes Service integration
       default: false
-
     nat_gateway:
       type: object
       title: NAT Gateway Configuration
@@ -159,18 +147,19 @@ spec:
         strategy:
           type: string
           title: NAT Gateway Strategy
-          description: Choose whether to create one NAT Gateway or one per availability zone
+          description: Choose whether to create one NAT Gateway or one per availability
+            zone
           enum:
           - single
           - per_az
           default: single
       required:
       - strategy
-
     private_endpoints:
       type: object
       title: Private Endpoints Configuration
-      description: Configure private endpoints for Azure services to improve security and reduce data transfer costs
+      description: Configure private endpoints for Azure services to improve security
+        and reduce data transfer costs
       x-ui-toggle: true
       properties:
         enable_storage:
@@ -223,13 +212,12 @@ spec:
           title: Enable Cognitive Services Private Endpoint
           description: Create private endpoint for Azure Cognitive Services
           default: false
-
     tags:
       type: object
       title: Additional Tags
-      description: Optional additional tags to apply to all VNet resources. These will be merged with the standard environment tags.
+      description: Optional additional tags to apply to all VNet resources. These
+        will be merged with the standard environment tags.
       x-ui-yaml-editor: true
-
   required:
   - vnet_cidr
   - region
@@ -238,27 +226,20 @@ spec:
   - private_subnets
   - database_subnets
   - nat_gateway
-inputs:
-  cloud_account:
-    type: '@outputs/cloud_account'
-    displayName: Cloud Account
-    description: The Azure Cloud Account where the VNet will be created
-    optional: false
-    providers:
-    - azure
-    - azurerm
 outputs:
   default:
     type: '@facets/azure-vnet-details'
-
 sample:
   kind: network
   flavor: azure_network
-  version: "1.0"
+  version: '1.0'
   spec:
     vnet_cidr: 10.0.0.0/16
     region: centralindia
-    availability_zones: ["1", "2", "3"]
+    availability_zones:
+    - '1'
+    - '2'
+    - '3'
     use_fixed_cidr_allocation: false
     public_subnets:
       count_per_az: 1
@@ -290,7 +271,6 @@ sample:
     tags:
       Environment: production
       Project: main-infrastructure
-
 iac:
   validated_files:
   - variables.tf
