--- a/modules/cloud_account/aws-cloudaccount/0.1/facets.yaml
+++ b/modules/cloud_account/aws-cloudaccount/0.1/facets.yaml
@@ -1,11 +1,9 @@
 intent: cloud_account
-flavor: default
+flavor: aws-cloudaccount
 version: '0.1'
 description: Module to configure and provision resources within a cloud account
 clouds:
 - aws
-- gcp
-- azure
 spec:
   description: Module to configure and provision resources within a cloud account
     (AWS, GCP, Azure)
@@ -85,9 +83,20 @@ outputs:
               role_arn: attributes.aws_iam_role
               session_name: attributes.session_name
               external_id: attributes.external_id
+      aws593:
+        source: hashicorp/aws593
+        version: = 5.93.0
+        attributes:
+          region: attributes.aws_region
+          skip_region_validation: true
+          attributes:
+            assume_role:
+              role_arn: attributes.aws_iam_role
+              session_name: attributes.session_name
+              external_id: attributes.external_id
 sample:
   version: '0.1'
-  flavor: default
+  flavor: aws-cloudaccount
   kind: cloud_account
   disabled: false
   spec: {}
