--- a/modules/cloud_account/azure-cloudaccount/0.1/facets.yaml
+++ b/modules/cloud_account/azure-cloudaccount/0.1/facets.yaml
@@ -1,17 +1,47 @@
-intent: "cloud_account"
-alias-flavors: ["default"]
-flavor: azure
+intent: cloud_account
+alias-flavors:
+- default
+flavor: azure-cloudaccount
 lifecycle: ENVIRONMENT
-version: "0.1"
+version: '0.1'
 depends_on: []
 input_type: instance
+description: Module to configure and provision resources within a cloud account
 composition: {}
-conditional_on_intent: ""
+conditional_on_intent: ''
 clouds:
 - azure
+spec:
+  description: Module to configure and provision resources within a cloud account
+  properties:
+    cloud_account:
+      description: Select the cloud account to use (must be previously linked)
+      title: Cloud Account
+      type: string
+      x-ui-typeable: true
+      x-ui-overrides-only: true
+      x-ui-api-source:
+        endpoint: /cc-ui/v1/accounts/
+        method: GET
+        labelKey: name
+        valueKey: id
+        filterConditions:
+        - field: accountType
+          value: CLOUD
+        - field: provider
+          value: AZURE
+        params:
+          includeContent: false
+  required:
+  - cloud_account
+  title: Cloud Account Manager
+  type: object
+  x-ui-order:
+  - cloud_provider
+  - cloud_account
 outputs:
   default:
-    type: "@outputs/cloud_account"
+    type: '@outputs/cloud_account'
     providers:
       azurerm:
         source: hashicorp/azurerm
@@ -50,8 +80,11 @@ outputs:
           client_secret: attributes.client_secret
           tenant_id: attributes.tenant_id
 sample:
-  version: "0.1"
-  flavor: azure
+  version: '0.1'
+  flavor: azure-cloudaccount
   kind: cloud_account
   disabled: false
   spec: {}
+iac:
+  validated_files:
+  - variables.tf
