--- a/modules/network/azure_vpc/0.2/facets.yaml
+++ b/modules/network/azure_vpc/0.2/facets.yaml
@@ -1,16 +1,18 @@
 intent: network
 flavor: azure_vpc_ex_nat
-alias-flavors: ["default"]
-version: "0.2"
+alias-flavors:
+- default
+version: '0.2'
 description: Adds network - azure vpc flavor with extended NAT gateway support
 clouds:
 - azure
 outputs:
   default:
-    type: "@outputs/azure_vpc"
+    type: '@outputs/azure_vpc'
 spec:
   title: network
-  description: Specification of the network for azure vpc flavor with extended NAT gateway support
+  description: Specification of the network for azure vpc flavor with extended NAT
+    gateway support
   type: object
   properties:
     choose_vpc_type:
@@ -20,8 +22,11 @@ spec:
       x-ui-type: radio
       x-ui-immutable: true
       x-ui-overrides-only: true
-      enum: [{label: Create New VPC, value: create_new_vpc}, {label: Use Existing
-            VPC, value: use_existing_vpc}]
+      enum:
+      - label: Create New VPC
+        value: create_new_vpc
+      - label: Use Existing VPC
+        value: use_existing_vpc
       default: create_new_vpc
     azs:
       title: Availability Zones
@@ -37,11 +42,10 @@ spec:
       title: VPC CIDR
       description: CIDR block for the vpc
       x-ui-placeholder: e.g. 10.45.0.0/16
-      pattern: 
-        ^(?!10\.0\.0\.0\/16$)(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
-      x-ui-error-message: "The provided CIDR block is invalid. Ensure it is a valid
+      pattern: ^(?!10\.0\.0\.0\/16$)(10\.(\d{1,3}\.){2}\d{1,3}\/(2[0-8]|[89]|1[0-9])|172\.(1[6-9]|2[0-9]|3[01])\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9])|192\.168\.(\d{1,3}\.){1}\d{1,3}\/(2[0-8]|[12][0-9]|1[6-9]))$
+      x-ui-error-message: The provided CIDR block is invalid. Ensure it is a valid
         private IP range in CIDR notation and note that the CIDR block 10.0.0.0/16
-        is not allowed."
+        is not allowed.
       type: string
       x-ui-immutable: true
       x-ui-overrides-only: true
@@ -51,7 +55,8 @@ spec:
       type: string
       x-ui-visible-if:
         field: spec.choose_vpc_type
-        values: [use_existing_vpc]
+        values:
+        - use_existing_vpc
       x-ui-immutable: true
       x-ui-overrides-only: true
     resource_group_name:
@@ -60,35 +65,78 @@ spec:
       type: string
       x-ui-visible-if:
         field: spec.choose_vpc_type
-        values: [use_existing_vpc]
-      x-ui-immutable: true
-      x-ui-overrides-only: true
-    use_existing_nat_gateways:
-      title: Use Existing NAT Gateways
-      description: Whether to use existing NAT gateways instead of creating new ones
-      type: boolean
-      default: false
-      x-ui-immutable: true
-      x-ui-overrides-only: true
-    existing_nat_gateway_ids:
-      title: Existing NAT Gateway IDs
-      description: List of existing NAT Gateway IDs to use
-      type: array
-      x-ui-placeholder: e.g. /subscriptions/.../resourceGroups/.../providers/Microsoft.Network/natGateways/nat-gw-1
-      x-ui-visible-if:
-        field: spec.use_existing_nat_gateways
         values:
-        - true
+        - use_existing_vpc
       x-ui-immutable: true
       x-ui-overrides-only: true
-      items:
-        type: string
-  required: [azs, vpc_cidr, vnet_name, resource_group_name]
-  x-ui-order: [choose_vpc_type, vnet_name, resource_group_name, use_existing_nat_gateways, existing_nat_gateway_ids, azs, vpc_cidr]
+    nat_gateway_type:
+      title: NAT Gateway Configuration
+      description: Choose how to configure NAT gateway for outbound connectivity.
+        Note - Existing NAT Gateway cannot be shared across multiple VNets simultaneously
+      type: string
+      x-ui-type: radio
+      x-ui-immutable: true
+      x-ui-overrides-only: true
+      enum:
+      - label: Create New NAT Gateway
+        value: create_new
+      - label: Use Existing NAT Gateway
+        value: use_existing
+      default: create_new
+    existing_nat_gateway_name:
+      title: Existing NAT Gateway Name
+      description: Name of the existing NAT gateway to use. Must not be currently
+        attached to subnets in a different VNet
+      type: string
+      x-ui-placeholder: e.g. nat-gw-1
+      x-ui-visible-if:
+        field: spec.nat_gateway_type
+        values:
+        - use_existing
+      x-ui-immutable: true
+      x-ui-overrides-only: true
+    use_vnet_resource_group:
+      title: Use VNet's Resource Group for NAT Gateway
+      description: Whether to automatically use the VNet's resource group for existing
+        NAT gateway lookup. Set to false to specify a different resource group
+      type: boolean
+      default: true
+      x-ui-visible-if:
+        field: spec.nat_gateway_type
+        values:
+        - use_existing
+      x-ui-immutable: true
+      x-ui-overrides-only: true
+    existing_nat_gateway_resource_group:
+      title: Existing NAT Gateway Resource Group
+      description: Resource group where NAT gateway is located
+      type: string
+      x-ui-placeholder: e.g. rg-nat-gateways
+      x-ui-visible-if:
+        field: spec.use_vnet_resource_group
+        values:
+        - false
+      x-ui-immutable: true
+      x-ui-overrides-only: true
+  required:
+  - azs
+  - vpc_cidr
+  - vnet_name
+  - resource_group_name
+  x-ui-order:
+  - choose_vpc_type
+  - vnet_name
+  - resource_group_name
+  - nat_gateway_type
+  - existing_nat_gateway_name
+  - use_vnet_resource_group
+  - existing_nat_gateway_resource_group
+  - azs
+  - vpc_cidr
 sample:
   kind: network
   flavor: azure_vpc_ex_nat
-  version: "0.2"
+  version: '0.2'
   lifecycle: ENVIRONMENT_NO_DEPS
   disabled: true
   depends_on: []
