changed azure_cache redis kind

--- a/modules/redis/azure_cache/0.2/facets.yaml
+++ b/modules/redis/azure_cache/0.2/facets.yaml
@@ -66,7 +66,7 @@ outputs:
     type: '@outputs/redis'
 sample:
   flavor: azure_cache
-  kind: azure_cache
+  kind: redis
   disabled: false
   metadata: {}
   version: '0.2'
