updated the gcs outputs

--- a/modules/google_cloud_storage/default/0.2/facets.yaml
+++ b/modules/google_cloud_storage/default/0.2/facets.yaml
@@ -3,9 +3,6 @@ flavor: default
 version: '0.2'
 clouds:
 - gcp
-outputs:
-  default:
-    type: '@outputs/google_cloud_storage'
 description: Creates and manages a Google Cloud Storage bucket with configurable options.
 spec:
   title: Google Cloud Storage Bucket
@@ -149,6 +146,22 @@ inputs:
     type: '@outputs/cloud_account'
     providers:
     - google
+outputs:
+  default:
+    type: '@outputs/google_cloud_storage''
+  attributes.read_only_role:
+    type: '@outputs/gcp_iam_role_name'
+    title: Read-Only IAM Role
+    description: The predefined IAM role for read-only access to the bucket
+  attributes.read_write_role:
+    type: '@outputs/gcp_iam_role_name'
+    title: Read-Write IAM Role
+    description: The predefined IAM role for read-write access to the bucket
+  attributes.bucket_iam_condition_expression:
+    type: '@outputs/gcp_iam_condition_expression'
+    title: Bucket IAM Condition Expression
+    description: An IAM condition expression using startsWith to match this specific
+      bucket
 sample:
   kind: google_cloud_storage
   flavor: default
