--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -494,10 +494,8 @@ spec:
               type: array
               title: Startup Exec Command
               pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter startup exec for the Pod, commands are separated
-                by space"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be space separated"
+              x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
+              x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.startup_check_type
                 values: ["ExecCheck"]
@@ -1016,7 +1014,7 @@ spec:
                   title: Evironment Variable
                   description: Environment Variable
                   type: string
-              x-ui-yaml-editor: true
+                  x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
               description: List of evironment variables to be created from referencing
@@ -1285,7 +1283,7 @@ spec:
                   title: Evironment Variable
                   description: Environment Variable
                   type: string
-              x-ui-yaml-editor: true
+                  x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
               description: List of evironment variables to be created from referencing
@@ -1745,10 +1743,8 @@ spec:
                       type: array
                       title: Startup Exec Command
                       pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter startup exec for the Pod, commands
-                        are separated by space"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be space separated"
+                      x-ui-placeholder: "Add each command or argument separately, e.g. /bin/sh"
+                      x-ui-error-message: "Enter each command/argument in a separate line (e.g., /bin/sh, -c, echo ok)"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
                         values: ["ExecCheck"]
